# SkyPluseDrone

./: README.md
.cmake/api/v1/reply/: cache-v2-b8f16168cf4ccf8dfe1f.json  cmakeFiles-v1-7d999570bba928cfcd69.json  codemodel-v2-3a16c3eb1be902c3d71f.json  directory-.-Debug-7c364837bf7991f08d55.json  index-2024-05-10T13-58-57-0079.json  target-SkyPulseDrone_FlightControlSystem-Debug-c1ae036a9b13cd0dcb37.json  target-SkyPulseDrone_FlightControlSystem_autogen-Debug-98712b0b94a3e7079754.json
SkyPluseDrone_GroundStation/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
SkyPluseDrone_GroundStation/COMM/: tcp.cpp  udp.cpp  udp.h
SkyPulseDrone_FlightControlSystem/: CMakeLists.txt  Resource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SkyPulseDrone_FlightControlSystem/ALGORITHM/: kalmanfilter.cpp  kalmanfilter.h
SkyPulseDrone_FlightControlSystem/COMM/: tcp.cpp  tcp.h
SkyPulseDrone_FlightControlSystem/DRIVER/: i2cdriver.cpp  i2cdriver.h
SkyPulseDrone_FlightControlSystem/SENSOR/: bmp180.cpp  mpu6050.cpp  mpu6050.h  qmc5883.cpp
SkyPulseDrone_FlightControlSystem/SENSORS/: bmp180.cpp  bmp180.h  mpu6050.cpp  mpu6050.h  qmc5883.cpp  qmc5883.h
SkyPulseDrone_FlightControlSystem/SYSTEM/: main.cpp  mainsystem.cpp  mainsystem.h  sensormanager.cpp  sensormanager.h
SkyPulseDrone_GroundStation/: CMakeLists.txt  mainwindow.ui  resource.qrc
SkyPulseDrone_GroundStation/COMM/: tcp.cpp  tcp.h
